...

    if (isProperty) {
      isForRent = itemForAddEmplyee.property_for === "Rent";
      isForSell = itemForAddEmplyee.property_for === "Sell" || itemForAddEmplyee.property_for === "Buy";

      isCommercial = itemForAddEmplyee.property_type === "Commercial";
      isResidential = itemForAddEmplyee.property_type === "Residential";

      if (isResidential && isForRent) {
        toggleSelection(employeeObj, itemForAddEmplyee);
      } else if (isResidential && isForSell) {
        toggleSelection(employeeObj, itemForAddEmplyee);
      } else if (isCommercial && isForRent) {
...
          </View>
          <View style={styles.verticalLine}></View>
          <View style={[styles.subDetails]}>
            <Text style={[styles.subDetailsValue]}>
              {numDifferentiation(item.sell_details.expected_sell_price)}
            </Text>
            <Text style={[styles.subDetailsTitle]}>Price</Text>
          </View>
          <View style={styles.verticalLine}></View>
          <View style={[styles.subDetails]}>
            <Text style={[styles.subDetailsValue]}>
              {item.property_details.building_type}
            </Text>
...
          </View>
          {/* <View style={styles.verticalLine}></View>
          <View style={[styles.subDetails]}>
            <Text style={[styles.subDetailsValue]}>
              {item.property_details.furnishing_status}
            </Text>
            <Text style={[styles.subDetailsTitle]}>Furnishing</Text>
          </View> */}
          <View style={styles.verticalLine}></View>
          <View style={[styles.subDetails]}>
            <Text style={[styles.subDetailsValue]}>800 sqft</Text>
            <Text style={[styles.subDetailsTitle]}>Builtup</Text>
          </View>
        </View>
      </View>

      <Modal
        animationType="slide"
...
