...
          headerShown: true
        }}
      /> */}
      <Stack.Screen
        name="CustomerMeetingDetails"
        component={CustomerMeetingDetails}
        options={{ title: "Meeting Details", headerShown: true, headerBackTitle: "Back" }}
      />

      <Stack.Screen
        name="MatchedCustomers"
        component={MatchedCustomers}
        options={{
...
        navigationOptions={{ tabBarVisible: false }}
      />

      <Stack.Screen
        name="CustomerListForMeeting"
        component={CustomerListForMeeting}
        options={{ title: "Customer List", headerBackTitle: "Back" }}
      />

      <Stack.Screen
        name="EmployeeListOfListing"
        component={EmployeeList}
        options={{ title: "Employee", headerBackTitle: "Back" }}
...
