...
        component={AddNewProperty}
        options={{ title: "Add New Property" }}
      />
      <Stack.Screen
        name="LocalityDetails"
        component={LocalityDetails}
        options={{ title: "Locality Details" }}
      />

      <Stack.Screen
        name="PropertyDetails"
        component={PropertyDetails}
        options={{ title: "Property Details" }}
      />

      <Stack.Screen
        name="RentDetails"
        component={RentDetails}
        options={{ title: "Rent Details" }}
      />

      <Stack.Screen
        name="AddImages"
        component={AddImages}
        options={{ title: "Add Images" }}
      />
      <Stack.Screen
        name="CardDetails"
        component={CardDetails}
        options={{ title: "Final Details" }}
      />
    </Stack.Navigator>
  );
};

export default StackScreens;
...
