# Parameterized template for commercial rent property test cases
appId: com.example.app
---
- tapOn: "bottom_tab_properties_icon"
- assertVisible: "Commercial"
- tapOn: "add_property_icon"
- tapOn: "property_type_commercial"
- tapOn: "property_for_rent"
- assertVisible: "Owner Details"
- tapOn: "Name*"
- inputText: "CRP2"
- hideKeyboard
- waitForAnimationToEnd  
- tapOn:
    text: return
    optional: true 
- tapOn: "Mobile*"
- inputText: "9833033332"
- hideKeyboard  
- waitForAnimationToEnd  
- tapOn: "Done"
- tapOn: "Address*"
- inputText: "juhu mumbai"
- hideKeyboard  
- waitForAnimationToEnd
- tapOn:
    text: return
    optional: true
- tapOn: 
    text: Done
    optional: true  
- tapOn: "NEXT"

- assertVisible: "Locality Details"
- tapOn: "City*"
- inputText: "Mumbai"
- tapOn:
    text: return
    optional: true 
- tapOn: "Add multiple locations within city"
- inputText: "Juhu"
- tapOn:
    text: return
    optional: true 
- tapOn: "Juhu Beach, Maharashtra"
- tapOn: "Building Name / Society*"
- inputText: "CRP2 Building 2"
- tapOn:
    text: return
    optional: true 
- tapOn: "Street / Landmark*"
- inputText: "CRP2 Landmark 2"
- tapOn:
    text: return
    optional: true 
- tapOn: "NEXT"

- assertVisible: "Property Details"
- assertVisible: "Property Type*"
- tapOn: "commercial_property_type_shop"
- tapOn: "Building Type*"
- tapOn: "commercial_property_building_type_mall"
- tapOn: "Ideal For*(Multi Select)"
- tapOn: "commercial_property_ideal_for_shop"
- scrollUntilVisible:
    element:
      text: "NEXT"
    direction: down
- assertVisible: "Parkings"
- tapOn: "commercial_parking_type_public"
- tapOn: "Power Backup*"
- tapOn: "power_backup_yes"
- tapOn: "Property Size"
- inputText: "500"
- hideKeyboard  
- waitForAnimationToEnd  
- tapOn: "Done"
- scrollUntilVisible:
    element:
      text: "NEXT"
    direction: down
- tapOn: "NEXT"

- assertVisible: "Rent Details"
- tapOn: "Expected Rent"
- inputText: "30000"
- tapOn: Done
- tapOn: "Expected Deposit"
- inputText: "150000"
- tapOn: Done
- tapOn: "Available From *"
- tapOn: " 30 "
- tapOn: "OK"
- tapOn: "NEXT"

- assertVisible: "Add Images"
- assertVisible: "ADD PHOTOS"
- tapOn: "ADD PHOTOS"
- tapOn: "Photo, 31 March 2018, 12:44 AM"
- waitForAnimationToEnd  
- tapOn: "NEXT"

- waitForAnimationToEnd  
- assertVisible: "Final Details"
- takeScreenshot: "final_details_commercial_rent_property_2"
- assertVisible: ".*.*Building 2.*.*"
- assertVisible: ".*.*Juhu.*.*"
- assertVisible: "Details"
- assertVisible: "Mall"
- assertVisible: "6-10"
- assertVisible: "Ideal For"
- assertVisible: "Owner"

- scrollUntilVisible:
    element:
      text: "ADD"
    direction: down
- waitForAnimationToEnd
- tapOn: "ADD"

- waitForAnimationToEnd
- tapOn: "Commercial"
- waitForAnimationToEnd
# - assertVisible: ".*Rent In CRP2 Building 2.*"